@@ -1,8 +1,6 @@
 To be addressed in 7.19.6 (planned release: August 2009)
 =========================
 
-246 - small logic error with CURLOPT_NOPROXY
-
 248 - "Pausing pipeline problems."
 
 249 - Wildcard cert name checking and null termination
