@@ -38,6 +38,7 @@ This release includes the following bugfixes:
  o improved the support for client certificates in libcurl+NSS
  o fix leak in gtls code
  o missing algorithms in libcurl+OpenSSL
+ o with noproxy set you could still get a proxy if a proxy env was set
 
 This release includes the following known bugs:
 
@@ -50,6 +51,6 @@ advice from friends like these:
  Andre Guibert de Bruet, Mike Crowe, Claes Jakobsson, John E. Malmberg,
  Aaron Oneal, Igor Novoseltsev, Eric Wong, Bill Hoffman, Daniel Steinberg,
  Fabian Keil, Michal Marek, Reuven Wachtfogel, Markus Koetter,
- Constantine Sapuntzakis, David Binderman, Johan van Selst
+ Constantine Sapuntzakis, David Binderman, Johan van Selst, Alexander Beedie
 
         Thanks! (and sorry if I forgot to mention someone)
